--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+div::-webkit-scrollbar {
+  display: none;
+}
 
 a {
   color: inherit;
