--- a/components/ui/modal/modal.module.css
+++ b/components/ui/modal/modal.module.css
@@ -18,6 +18,19 @@
   opacity: 100%;
 }
 
+.modalFloat {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  opacity: 100%;
+}
+
 .modal2 {
   display: none;
 }
