--- a/components/ui/contact/contact.module.css
+++ b/components/ui/contact/contact.module.css
@@ -1,5 +1,6 @@
 .contactForm {
   width: 90vw;
+  max-width: 1200px;
   max-height: 90vh;
   background-color: var(--white);
   z-index: 99;
@@ -45,6 +46,8 @@
   background-color: var(--lightgrey);
   border-radius: 10px;
   padding: 5px 7px;
+  font-size: var(--S);
+  cursor: pointer;
 }
 
 .icon {
@@ -55,6 +58,7 @@
   margin: 15px;
   opacity: 30%;
   transition: 0.3s;
+  cursor: pointer;
 }
 
 .icon:hover {
@@ -75,4 +79,11 @@
   font-size: var(--M);
   padding: 40px 30px;
   z-index: 99;
+}
+
+.trueCenter {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
 }
