--- a/components/ui/slider/slider.module.css
+++ b/components/ui/slider/slider.module.css
@@ -257,6 +257,29 @@
 }
 
 @media (max-width: 500px) {
+  .verticalSlide {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    box-shadow: var(--extraglow);
+    background-color: var(--lightergrey);
+  }
+  .verticalImg {
+    width: auto;
+    object-fit: cover;
+    margin: max(min(1vw, 20px), 10px) max(min(1vw, 20px), 10px);
+    border-radius: max(min(0.7vw, 7px), 3px);
+    box-shadow: var(--shorterglow);
+  }
+  .verticalTextCont {
+    width: 100%;
+    margin: max(min(1vw, 20px), 10px) max(min(1vw, 20px), 10px)
+      max(min(1vw, 20px), 10px) 0px;
+    background-color: var(--almostwhite);
+    border-radius: max(min(0.7vw, 7px), 3px);
+    box-shadow: var(--shorterglow);
+    transition: 0.3s;
+  }
   .verticalTitle {
     font-size: var(--ES);
     font-weight: bold;
