--- a/components/product_demo/productDemo.module.css
+++ b/components/product_demo/productDemo.module.css
@@ -18,7 +18,7 @@
     width: 100%;
     height: auto;
     max-height: max(min(30vw, 450px), 250px);
-    margin-top: 30px;
+    margin-top: 30px !important;
     padding-bottom: max(min(5.5vw, 40px), 18px);
     border-radius: max(min(1vw, 10px), 6px);
     margin: max(min(5.5vw, 40px), 18px), max(min(2vw, 20px), 12px) 0px,
