--- a/components/product_demo/productDemo.module.css
+++ b/components/product_demo/productDemo.module.css
@@ -77,6 +77,7 @@
     max-height: max(min(30vw, 450px), 250px);
     padding-bottom: max(min(5.5vw, 40px), 18px);
     border-radius: max(min(1vw, 10px), 6px);
+    margin-top: 10px !important;
     margin: max(min(5.5vw, 40px), 18px), max(min(2vw, 20px), 12px) 0px,
       max(min(2vw, 20px), 12px) 0px, max(min(2vw, 20px), 12px) 0px;
     transition: 0.3s;
