--- a/components/navigation/navbar.module.css
+++ b/components/navigation/navbar.module.css
@@ -1,3 +1,16 @@
+.navMainContainer {
+  position: relative;
+  display: flex;
+  height: max(min(8vw, 80px), 50px);
+  background-color: #fff;
+  padding: 20px;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 10px 10px -10px #e8e8e8;
+  font-size: var(--S);
+  z-index: 99 !important;
+}
+
 .navContainer {
   display: flex;
   height: max(min(8vw, 80px), 50px);
@@ -7,8 +20,8 @@
   align-items: center;
   box-shadow: 0 10px 10px -10px #e8e8e8;
   font-size: var(--S);
+  z-index: 99 !important;
 }
-
 .combo {
   display: flex;
   align-items: center;
