--- a/styles/base.css
+++ b/styles/base.css
@@ -11,6 +11,23 @@
   --almostwhite: #f9f9f9;
   --white: #fff;
 
+  --main: #8371cd;
+  --accent: #8371cd;
+  --light: #9e8af2;
+
+  /* Gradients */
+  --bg_gradient: linear-gradient(
+    95deg,
+    rgba(245, 245, 245, 1) 0%,
+    rgba(230, 230, 230, 1) 100%
+  );
+
+  --color: linear-gradient(
+    -35deg,
+    rgba(165, 138, 255, 1) 0%,
+    rgba(118, 0, 221, 1) 100%
+  );
+
   /* Responsive font sizes */
   --XXXXL: max(min(3vw, 4rem), 2.5rem);
   --XXXL: max(min(2.7vw, 3rem), 2rem);
@@ -18,6 +35,7 @@
   --XL: max(min(2.3vw, 2.2rem), 1.5rem);
   --LG: max(min(2.2vw, 1.9rem), 1.05rem);
   --L: max(min(2.2vw, 1.8rem), 0.9rem);
+  --MG: max(min(1.9vw, 1.7rem), 0.85rem);
   --M: max(min(1.9vw, 1.5rem), 0.85rem);
   --S: max(min(1.7vw, 1.2rem), 0.8rem);
   --XS: max(min(1vw, 1rem), 0.75rem);
@@ -39,12 +57,18 @@
   --EXXS: max(min(1.2vw, 1.3rem), 0.55rem);
 
   /* Effects */
+  --radius: max(min(1vw, 13px), 7px);
 
   --glow: 0 0 7px 3px rgba(0, 0, 0, 0.2);
 
   --shortglow: 0 0 2px 2px rgba(0, 0, 0, 0.05);
   --shorterglow: 0 0 1px 1px rgba(0, 0, 0, 0.06);
+  --shortestglow: 0 0 1px 1px rgba(0, 0, 0, 0.075);
+
   --extraglow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+
+  --wshortglow: 0 0 2px 2px rgba(255, 255, 255, 0.3);
+  --wshorterglow: 0 0 1px 1px rgba(255, 255, 255, 0.3);
 
   --topglow: 0 -10px 10px -10px rgba(0, 0, 0, 0.2);
   --bottomglow: 0 10px 10px -10px rgba(0, 0, 0, 0.2);
