--- a/components/ui/imgHero/imghero.module.css
+++ b/components/ui/imgHero/imghero.module.css
@@ -7,9 +7,20 @@
 }
 
 .small {
-  width: 30%;
+  @media (min-width: 0px) {
+    width: 35%;
+  }
+  @media (min-width: 700px) {
+    width: 30%;
+  }
+
   background-color: var(--lightergrey);
 }
 .big {
-  width: 70%;
+  @media (min-width: 0px) {
+    width: 65%;
+  }
+  @media (min-width: 700px) {
+    width: 70%;
+  }
 }
