--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -516,3 +516,170 @@
   font-size: var(--S);
   cursor: pointer;
 }
+
+/* Experiencia */
+
+.eTitle {
+  font-size: var(--LG);
+  font-weight: 700;
+  text-align: center;
+  margin: max(min(1.5vw, 50px), 30px) 0px max(min(1.5vw, 30px), 0px) 0px;
+}
+.mainCont {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.eCont {
+  display: flex;
+  position: relative;
+  align-items: center;
+  width: 90%;
+  max-width: 1200px;
+  margin-top: 20px;
+  padding: max(min(1.5vw, 30px), 15px);
+  background-color: var(--lightergrey);
+  border-radius: max(min(1vw, 10px), 7px);
+  transition: 0.3s;
+}
+
+.eCont:hover {
+  @media (min-width: 0px) {
+    scale: 1.07;
+  }
+  @media (min-width: 1000px) {
+    scale: 1.1;
+    margin: 30px;
+  }
+  @media (min-width: 1470px) {
+    scale: 1.2;
+    margin: 50px 30px 30px 30px;
+  }
+
+  transition: 0.3s;
+}
+
+.eContS {
+  display: flex;
+  position: relative;
+  align-items: center;
+  width: 90%;
+  max-width: 1200px;
+  margin-top: 20px;
+  padding: max(min(1.5vw, 30px), 15px);
+  background-color: var(--lightergrey);
+  border-radius: max(min(1vw, 10px), 7px);
+  transition: 0.3s;
+}
+
+.eContS:hover {
+  @media (min-width: 00px) {
+    scale: 1.05;
+  }
+  @media (min-width: 1000px) {
+    scale: 1.1;
+    margin: 30px;
+  }
+  @media (min-width: 1470px) {
+    scale: 1.2;
+    margin: 40px;
+  }
+
+  transition: 0.3s;
+}
+
+.eTxtContS {
+  height: 100%;
+  max-height: 200px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.eTitleS {
+  font-size: var(--S);
+  font-weight: 700;
+  transition: 0.3s;
+}
+
+.eCompanyS {
+  font-size: var(--XS);
+  font-weight: 500;
+  color: var(--darkergrey);
+  transition: 0.3s;
+}
+
+.eCompanyS:hover {
+  font-weight: 500;
+  text-decoration: underline;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.eDescS {
+  font-size: var(--XXS);
+  transition: 0.3s;
+}
+
+.eDateS {
+  font-size: var(--XXS);
+  font-weight: 500;
+  color: var(--darkgrey);
+  transition: 0.3s;
+}
+.eSkillsS {
+  font-size: var(--XXXS);
+  font-style: italic;
+  color: var(--darkgrey);
+  transition: 0.3s;
+}
+
+.eImgS {
+  max-width: 30%;
+  height: auto;
+  max-height: 150px;
+  padding: 20px;
+  margin-right: max(min(1.5vw, 30px), 15px);
+  transition: 0.3s;
+}
+
+/* Skills */
+.skillCont {
+  margin-top: 20px;
+  max-width: 1220px;
+
+  display: flex;
+  flex-wrap: wrap;
+  width: calc(90% + 20px);
+}
+
+.skill {
+  flex: 1;
+  min-width: 100px;
+  min-height: 40px;
+  background-color: blue;
+  border-radius: max(min(1vw, 10px), 7px);
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--lightergrey);
+  transition: 0.3s;
+  font-size: var(--XS);
+  font-weight: 500;
+  color: var(--darkgrey);
+}
+
+.skill:hover {
+  scale: 1.1;
+  transition: 0.3s;
+  color: var(--darkestgrey);
+}
+
+.skillY {
+  padding-left: 5px;
+}
